# CS701-Project

./: .gitignore  Project.code-workspace  README.md  create_dataset.py  decision_tree.py  decision_tree_smote.py  elasticnet_logistic_regression.py  elasticnet_logistic_regression_smote.py  logistic_regression.py  logistic_regression_smote.py  main.py  my_metrics.py  pyproject.toml  run.sh  static_compar.r
algro/: adaboot.py  adaboot_smote.py  bay_net.py  bay_net_smote.py  decision_tree.py  decision_tree_smote.py  deep_learning.py  deep_learning_smote.py  elasticnet_logistic_regression.py  elasticnet_logistic_regression_smote.py  extremely_randomized_trees.py  extremely_randomized_trees_smote.py  gradientboosting.py  gradientboosting_smote.py  knn.py  knn_smote.py  linear_da.py  linear_da_smote.py  logistic_regression.py  logistic_regression_smote.py  naive_bayes.py  naive_bayes_smote.py  neural_network.py  neural_network_smote.py  quad_da.py  quad_da_smote.py  random_forest.py  random_forest_smote.py  svm.py  svm_smote.py  test.py  test2.py  xgboost_.py  xgboost_smote.py
result/: ANN Parameters Result.csv  ANN Scores Result.csv  ANN with SMOTE Parameters Result.csv  ANN with SMOTE Scores Result.csv  AdaBoot Parameters Result.csv  AdaBoot Scores Result.csv  AdaBoot with SMOTE Parameters Result.csv  AdaBoot with SMOTE Scores Result.csv  DL Parameters Result.csv  DL Scores Result.csv  DL with SMOTE Parameters Result.csv  DL with SMOTE Scores Result.csv  Deci Tree Parameters Result.csv  Deci Tree Scores Result.csv  Deci Tree with SMOTE Parameters Result.csv  (+45 more)
