[tool.poetry]
name = "CS701"
version = "0.1"
description = "CS701 Test"
authors = ["Pakhin"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0"
hmeasure = "^0.1.6"
pandas = "^1.3.3"
pylint = "^2.11.1"
imbalanced-learn = "^0.8.1"
ipykernel = "^6.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
